# proxmox-desktop

./: .gitignore  README.md  package.json
src/: App.tsx
src/app/: README.md  vitest.config.ts
src/app/src/: App.tsx
src/backend/: README.md  __init__.py  __main__.py  backend_config.jsonc  pyproject.toml
src/backend/lib/logger/: logger.py
src/backend/lib/pmx/: __init__.py  use_server.py
src/backend/routes/: authentication.py
