[project]
name = "backend"
version = "0.1.0"
description = "ProxmoxDesktop backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dbus-python>=1.4.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "orjson>=3.11.8",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "starlette>=1.0.0",
    "uvicorn>=0.43.0",
    "websockets>=16.0",
]
